# backend/routes/routes.go
@@ -11,6 +11,7 @@ import (
 func RegisterRoutes(r *mux.Router) {
 	r.HandleFunc("/api/timetodry", controllers.GetTimeToDry).Methods("GET")
 	r.HandleFunc("/api/tmd", controllers.GetTMD).Methods("GET")
+	r.HandleFunc("/api/tmd/today", controllers.TMDToday).Methods("GET")
 	r.HandleFunc("/api/combined", controllers.GetCombinedData).Methods("GET")
 	r.HandleFunc("/api/combined/populate", controllers.PopulateCombinedData).Methods("POST")
 
